--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 					<h1 class="inner">Welcome<br />
 
 						<strong>This is a place where I </strong>
-								<div id="container">
-									<div id="text"></div><div id="cursor"></div>
-								</div>
+						<div id="container">
+							<div id="text"></div>
+							<div id="cursor"></div>
+						</div>
 						<ul class="actions">
 							<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a>
 							</li>
@@ -42,7 +43,15 @@
 					<img src="images/pic01.jpg" alt="" />
 				</div>
 			</section>
-
+			<!-- Panel (Spotlight) -->
+			<section class="panel spotlight medium right" id="first">
+				<div class="content span-7">
+					<h2 class="inner"><a href="./Sylvia/index.html">Sylvia</a></a></h2>
+				</div>
+				<div class="image filtered span-1-75" data-position="25% 25%">
+					<img src="images/pic01.jpg" alt="" />
+				</div>
+			</section>
 			<!-- Panel (Spotlight) -->
 			<section class="panel spotlight medium right" id="first">
 				<div class="content span-7">
@@ -52,7 +61,7 @@
 					<img src="images/pic01.jpg" alt="" />
 				</div>
 			</section>
-
+			<!--
 			<section class="panel spotlight medium right">
 				<div class="content span-7">
 					<h2 class="inner"><a href="./posts/content/MantraPushpam/index.html">Art</a></h2>
@@ -60,11 +69,8 @@
 				<div class="image filtered span-1-75" data-position="25% 25%">
 					<img src="images/pic02.jpg" alt="" />
 				</div>
-
-
-
 			</section>
-
+-->
 			<!--Additonal panels-->
 
 			<section class="panel spotlight medium right">
@@ -440,9 +446,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			}
 			currentSpan.innerHTML = currentVerb;
 		}
-
-
-
 	</script>
 
 </body>
